--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
-PASSWORD_POSTGRES=lebronjamesisgoat
-HOST=db.yoewhphqxstqvcjjjjsp.supabase.co
+PASSWORD_POSTGRES_PROD=lebronjamesisgoat
+HOST_PROD=db.yoewhphqxstqvcjjjjsp.supabase.co
 DATABASE=postgres
 DB_USERNAME=postgres
-DB_PORT=5432
+DB_PORT_PROD=5432
+PASSWORD_POSTGRES_TEST=michaeljordanisgoat
+HOST_TEST=db.xhwfhuahdmlwunfgylam.supabase.co
+NODE_ENV=test
 JWT_SECRET=thatsthesecret
