--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "test": "mocha ./tests/*$NAME*.{test,spec}.js --timeout 20000",
+    "start": "if-env NODE_ENV=development ?? nodemon index.js || npm test"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.26.0",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "http-status": "^1.5.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
@@ -23,9 +25,13 @@
     "sequelize-cli": "^6.4.1"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
     "eslint": "^8.10.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
-    "nodemon": "^2.0.15"
+    "if-env": "^1.0.4",
+    "mocha": "^9.2.2",
+    "nodemon": "^2.0.15",
+    "shelljs": "^0.8.5"
   }
 }
