fix: ignore env

--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ DB_USERNAME=postgres
 DB_PORT_PROD=5432
 PASSWORD_POSTGRES_TEST=michaeljordanisgoat
 HOST_TEST=db.xhwfhuahdmlwunfgylam.supabase.co
-NODE_ENV=test
+NODE_ENV=development
 JWT_SECRET=thatsthesecret
